# borg

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.tui  README.md  docker-compose.yml  run.sh  web_ui.rs
borg-coordinator/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
borg-coordinator/config/: self-development.json
borg-coordinator/docs/: claude-code-integration.md  docker-setup.md
borg-coordinator/examples/: basic-usage.ts  self-development-workflow.ts
borg-coordinator/scripts/: dev.sh  setup.sh
borg-coordinator/src/: index.ts
borg-coordinator/src/communication/: CommunicationHub.ts
borg-coordinator/src/dashboard/: DashboardServer.ts
borg-coordinator/src/dashboard/public/: app.js  index.html
borg-coordinator/src/instances/: ClaudeAPIClient.ts  InstanceManager.ts
borg-coordinator/src/orchestrator/: Orchestrator.ts  TaskQueue.ts
borg-coordinator/src/roles/: RolePromptGenerator.ts
borg-coordinator/src/types/: index.ts
scripts/: local.sh  setup.sh
src/: lib.rs  main.rs
src/orchestrator/: mod.rs  task_queue.rs
src/types/: mod.rs
