[package]
name = "borg-coordinator"
version = "0.1.0"
edition = "2021"
authors = ["Claude AI"]
description = "AI Collaborative Development Orchestrator - Rust Edition"
license = "MIT"

[[bin]]
name = "borg-coordinator"
path = "src/main.rs"

[[bin]]
name = "web-ui"
path = "web_ui.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Process management (removed - not used)
# TUI dependencies (removed - using web interface)

# Configuration
clap = { version = "4.0", features = ["derive"] }

# File system operations (removed - not used)
# Async channels (removed - not used)

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"